@@ -1,20 +1,21 @@
-.TH SG_ZONE "8" "November 2015" "sg3_utils\-1.42" SG3_UTILS
+.TH SG_ZONE "8" "May 2018" "sg3_utils\-1.43" SG3_UTILS
 .SH NAME
-sg_zone \- send SCSI OPEN, CLOSE or FINISH ZONE command
+sg_zone \- send SCSI OPEN, CLOSE, FINISH or SEQUENTIALIZE ZONE command
 .SH SYNOPSIS
 .B sg_zone
-[\fI\-\-all\fR] [\fI\-\-close\fR] [\fI\-\-finish\fR] [\fI\-\-help\fR]
-[\fI\-\-open\fR] [\fI\-\-verbose\fR] [\fI\-\-version\fR] [\fI\-\-zone=ID\fR]
-\fIDEVICE\fR
+[\fI\-\-all\fR] [\fI\-\-close\fR] [\fI\-\-count=ZC\fR] [\fI\-\-finish\fR]
+[\fI\-\-help\fR] [\fI\-\-open\fR] [\fI\-\-sequentialize\fR]
+[\fI\-\-verbose\fR] [\fI\-\-version\fR] [\fI\-\-zone=ID\fR] \fIDEVICE\fR
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
-Sends a SCSI OPEN ZONE, CLOSE ZONE or FINISH ZONE command to the \fIDEVICE\fR.
-These commands are found in the ZBC draft standard revision
-4c (zbc\-r04c.pdf).
+Sends a SCSI OPEN ZONE, CLOSE ZONE, FINISH ZONE or SEQUENTIALIZE ZONE
+command to the \fIDEVICE\fR. All but the last are found in the soon to
+be released ZBC standard (close to draft ZBC BSR INCITS 536 revision 05).
+The SEQUENTIALIZE ZONE command was added in zbc2r01b.
 .PP
-One and only one of the \fI\-\-open\fR, \fI\-\-close\fR and \fI\-\-finish\fR
-options can be chosen.
+One and only one of the \fI\-\-open\fR, \fI\-\-close\fR, \fI\-\-finish\fR
+and \fI\-\-sequentialize\fR options can be chosen.
 .SH OPTIONS
 Arguments to long options are mandatory for short options as well.
 .TP
@@ -24,6 +25,11 @@ sets the ALL field in the cdb.
 \fB\-c\fR, \fB\-\-close\fR
 causes the CLOSE ZONE command to be sent to the \fIDEVICE\fR.
 .TP
+\fB\-C\fR, \fB\-\-count\fR=\fIZC\fR
+ZC is placed in the Zone Count field in the cdb of all four commands
+supported by this utility. ZC should be a value from 0 to 65535 (0xffff)
+inclusive.
+.TP
 \fB\-f\fR, \fB\-\-finish\fR
 causes the FINISH ZONE command to be sent to the \fIDEVICE\fR.
 .TP
@@ -32,6 +38,9 @@ output the usage message then exit.
 .TP
 \fB\-o\fR, \fB\-\-open\fR
 causes the OPEN ZONE command to be sent to the \fIDEVICE\fR.
+.TP
+\fB\-S\fR, \fB\-\-sequentialize\fR
+causes the SEQUENTIALIZE ZONE command to be sent to the \fIDEVICE\fR.
 .TP
 \fB\-v\fR, \fB\-\-verbose\fR
 increase the level of verbosity, (i.e. debug output).
@@ -52,7 +61,7 @@ Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2014\-2015 Douglas Gilbert
+Copyright \(co 2014\-2018 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
